--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
         <div>
         <p class="subText">Watch in smart TVs, Playstation, Xbox,Chromecast,Apple TV,Blu-ray players and more.</p>
          </div>
+
          <div>
              <img class="tvImg" src='img/tv.png'>
          </div>
+         <video class='tvVid' width="320" height="auto" autoplay muted loop>
+            <source src="img/video-tv-0819.m4v" type="video/mp4">
+            Your browser does not support the video tag.
+          </video> 
         </section>
         <hr style="height:8px;border-width:0;color:gray;background-color:rgb(29, 29, 29)">
         <section>
@@ -66,8 +71,12 @@
                     </p>
                 </div>
                 <div>
-                    <img class='tvImg'src='img/device-pile.png'>
+                    <img class='tvImg1'src='img/device-pile.png'>
                 </div>
+                <video class='tvVid2' width="320" height="auto" autoplay muted loop>
+                    <source src="img/video-devices.m4v" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video> 
             </div>
         </section>
         <hr style="height:8px;border-width:0;color:gray;background-color:rgb(29, 29, 29)">
@@ -82,6 +91,7 @@
                 <div>
                     <img class= 'tvCharacter'src='img/AAAABfpnX3dbgjZ-Je8Ax3xn0kXehZm_5L6-xe6YSTq_ucht9TI5jwDMqusWZKNYT8DfGudD0_wWVVTFLiN2_kaQJumz2iivUWbIbAtF.png'>
                 </div>
+                
             </div>
             
         </section>
