--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </div>
     <hr style="height:8px;border-width:0;color:gray;background-color:rgb(29, 29, 29)">
     <div>
+
+        <!-- Enjoy on your TV -->
         <section>
         <div>
         <h3 class= "subTitle"> Enjoy on your TV.</h3>
@@ -61,6 +63,9 @@
           </video> 
         </section>
         <hr style="height:8px;border-width:0;color:gray;background-color:rgb(29, 29, 29)">
+
+        
+        <!-- Watch Everywhere -->
         <section>
             <div>
                 <div>
@@ -80,6 +85,8 @@
             </div>
         </section>
         <hr style="height:8px;border-width:0;color:gray;background-color:rgb(29, 29, 29)">
+
+        <!-- Create porfiles for children -->
         <section>
             <div>
                 <div>
