--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
              <img class="tvImg" src='img/tv.png'>
          </div>
          <video class='tvVid' width="320" height="auto" autoplay muted loop>
-            <source src="img/video-tv-0819.m4v" type="video/mp4">
+            <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v" type="video/mp4">
             Your browser does not support the video tag.
           </video> 
         </section>
         <hr style="height:8px;border-width:0;color:gray;background-color:rgb(29, 29, 29)">
 
-        
+
         <!-- Watch Everywhere -->
         <section>
             <div>
@@ -79,7 +79,7 @@
                     <img class='tvImg1'src='img/device-pile.png'>
                 </div>
                 <video class='tvVid2' width="320" height="auto" autoplay muted loop>
-                    <source src="img/video-devices.m4v" type="video/mp4">
+                    <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices.m4v" type="video/mp4">
                     Your browser does not support the video tag.
                   </video> 
             </div>
